# SeniRoad

./: .gitignore
yilu_an_backend/: .env.example  .gitignore  README.md  database_design.md  database_schema.md  database_views_design.md  environment.yml  pyproject.toml  run_server.py  test_imports.py  test_process_text.py  test_sse_navigation.py  validate_code.py
yilu_an_backend/app/: Untitled.ipynb  config.py  database.py  llmclient.py  main.py
yilu_an_backend/app/.ipynb_checkpoints/: llmclient-checkpoint.py
yilu_an_backend/app/agent/: __init__.py  destination_parse_agent.py  llm_navigation_agent.py  multi_agent_navigation.py  navigation_agent.py
yilu_an_backend/app/agent/tools/: navigation.py  speech_to_text.py  (+2 more)
yilu_an_backend/app/api/: websocket.py
yilu_an_backend/app/dependencies/: __init__.py  auth.py  services.py
yilu_an_backend/app/middleware/: __init__.py  cors.py  logging.py
yilu_an_backend/app/models/: __init__.py  binding.py  destination.py  device.py  example.py  favorite_place.py  location.py  navigation_record.py  tag.py  user.py  voice_log.py
yilu_an_backend/app/repositories/: __init__.py  binding_repository.py  destination_repository.py  device_repository.py  favorite_place_repository.py  location_repository.py  navigation_record_repository.py  tag_repository.py  user_repository.py  voice_log_repository.py
yilu_an_backend/app/schemas/: __init__.py  binding.py  destination.py  device.py  favorite_place.py  location.py  navigation.py  navigation_record.py  speech.py  tag.py  user.py  voice_log.py
yilu_an_backend/app/services/: __init__.py  ai_parser.py  auth.py  binding.py  device.py  favorite_place.py  location.py  navigation.py  navigation_record.py  notification.py  tag.py  user.py  voice_log.py
yilu_an_backend/app/utils/: __init__.py  security.py  validators.py
yilu_an_backend/tests/: test_auth.py  test_device.py  test_location.py
(+182 files in other folders)
