[project]
name = "yilu-an-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.5",
    "aiosignal>=1.4.0",
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "async-timeout>=5.0.1",
    "attrs>=26.1.0",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.7",
    "colorama>=0.4.6",
    "cryptography>=46.0.7",
    "dashscope>=1.25.16",
    "distro>=1.9.0",
    "exceptiongroup>=1.3.1",
    "frozenlist>=1.8.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "jiter>=0.14.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.1.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-prebuilt>=1.0.9",
    "langgraph-sdk>=0.3.13",
    "langsmith>=0.7.30",
    "multidict>=6.7.1",
    "openai>=2.31.0",
    "orjson>=3.11.8",
    "ormsgpack>=1.12.2",
    "propcache>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pycparser>=3.0",
    "pydantic>=2.13.0",
    "pydantic-core>=2.46.0",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "regex>=2026.4.4",
    "requests>=2.33.1",
    "requests-toolbelt>=1.0.0",
    "sniffio>=1.3.1",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "urllib3>=2.6.3",
    "uuid-utils>=0.14.1",
    "websocket-client>=1.9.0",
    "yarl>=1.23.0",
    "zstandard>=0.25.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.13.1",
    "passlib>=1.7.4",
    "fastapi>=0.104.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",
] 
